--- a/student-management-system/src/main/resources/application.properties
+++ b/student-management-system/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/student_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Badri@2001
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
